[package]
name = "gmoflf"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>", "mplisak <59884139+mplisak@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
